--- a/_config.yml
+++ b/_config.yml
@@ -87,9 +87,8 @@ analytics:
 author:
   name             : "Priya Batra"
   avatar           : "profile.png"
-  bio              : "PhD Student at Department of Physics, IISER Pune <a style='color: black;' href='http://www.iiserpune.ac.in/'></a>"
-                                     Prime Minister Research Fellow"
-  location         : Pune, India"
+  bio              : "PhD Student at Department of Physics, IISER Pune <a style='color: black;' href='http://www.iiserpune.ac.in/'></a> <br> Prime Minister Research Fellow"
+  location         : Pune, India
   employer         : 
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
