--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,5 +12,5 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
+  - title: "Machine Learning meets Quantum Physics"
     url: /markdown/
