--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,3 +14,6 @@ main:
     
   - title: "Machine Learning meets Quantum Physics"
     url: /markdown/
+    
+  - title: "Contact"
+    url: /Contact/
