--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ analytics:
 author:
   name             : "Priya Batra"
   avatar           : "profile.png"
-  bio              : "PhD Student at Department of Physics, <a style='color: black;' href='http://www.iiserpune.ac.in/'> IISER Pune </a> <br> Prime Minister Research Fellow"
+  bio              : "PhD Student at Department of Physics, <a style='color: black;' href='http://www.iiserpune.ac.in/'> Indian Institute of Science Education Research Pune </a> <br> Prime Minister Research Fellow"
   location         : Pune, India
   employer         : 
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
