--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ analytics:
 # Site Author
 author:
   name             : "Priya Batra"
-  avatar           : "profile.png"
+  avatar           : "IMG_20191020_143018.png"
   bio              : "PhD Student at Department of Physics, <a style='color: black;' href='http://www.iiserpune.ac.in/'> Indian Institute of Science Education Research Pune </a> <br> Prime Minister Research Fellow"
   location         : Pune, India
   employer         : 
