--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ author:
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=gPGn_2UAAAAJ&hl=en&oi=ao"
   email            : "priya.batra@students.iiserpune.ac.in"
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     : "https://www.researchgate.net/profile/Priya_Batra2"  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
   codepen          :
