--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,9 @@ main:
     
   - title: "CV"
     url: /cv/
+  
+  - title: "Teaching"
+    url: /teaching/
     
   - title: "Machine Learning meets Quantum Physics"
     url: /Machine Learning meets Quantum Physics/
